# fc-play

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT.md  README.md  pyproject.toml  server.py
.github/workflows/: tests.yml
fc_play/: __init__.py
fc_play/api/: admin_config.py  admin_routes.py  app.py  routes.py
fc_play/api/admin_static/: admin.css  admin.js  index.html
fc_play/cli/: __init__.py  entrypoints.py
fc_play/config/: constants.py  paths.py  settings.py
fc_play/providers/: key_pool.py  router.py
fc_play/tui/: __init__.py  app.py  panels.py  themes.py
scripts/: ci.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
smoke/: README.md
tests/: test_imports.py
