[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fc-play"
version = "1.0.0"
description = "🚀 Play with Claude — Free, Fast, Fabulous. Proxy server for Anthropic & OpenAI APIs."
requires-python = ">=3.12.0"
license = { text = "MIT" }
authors = [
    { name = "Fable No Mercy", email = "dev@fc-play.dev" },
]
keywords = ["claude", "anthropic", "openai", "proxy", "api", "free"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "jsonschema>=4.20.0",
    "markdown-it-py>=3.0.0",
    "pygments>=2.17.0",
    "textual>=0.52.0",
    "pydantic-extra-types>=2.0.0",
    "orjson>=3.10.0",
]

[project.scripts]
fc-play = "fc_play.cli.entrypoints:cli"
fc-play-server = "fc_play.cli.entrypoints:server"
fc-play-admin = "fc_play.cli.entrypoints:admin"
fc-play-tui = "fc_play.cli.entrypoints:tui"

[project.optional-dependencies]
voice = [
    "grpcio>=1.60.0",
    "nvidia-riva-client>=2.16.0",
]
voice_local = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "librosa>=0.10.0",
]
messaging = [
    "discord.py>=2.3.0",
    "python-telegram-bot>=20.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PERF", "RUF", "ARG"]
ignore = ["E501", "B008", "RUF006", "ARG001", "ARG002"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[project.urls]
Homepage = "https://github.com/Alishahryar1/fc-play"
Source = "https://github.com/Alishahryar1/fc-play"
Issues = "https://github.com/Alishahryar1/fc-play/issues"
